force-app/main/default/objects/inspire1__Project_Lock__c/inspire1__Project_Lock__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Manages the locking of projects to prevent overwriting of updates.</description>
    <label>Project Lock</label>
    <nameField>
        <label>Project Lock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Lock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>