force-app/main/default/objects/inspire1__Project_Lock__c/fields/inspire1__IsLocked__c.field-meta.xml
<CustomField>
    <fullName>inspire1__IsLocked__c</fullName>
    <formula>(NOT(ISBLANK(inspire1__User__c))) &amp;&amp; (NOT(ISBLANK(inspire1__LockDate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>