force-app/main/default/objects/inspire1__Project_Lock__c/fields/inspire1__LockDate__c.field-meta.xml
<CustomField>
    <fullName>inspire1__LockDate__c</fullName>
    <label>Lock Date</label>
    <type>DateTime</type>
</CustomField>