force-app/main/default/objects/inspire1__Project_Lock__c/fields/inspire1__Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Lock</relationshipLabel>
    <relationshipName>Project_Lock</relationshipName>
    <type>Lookup</type>
</CustomField>