force-app/main/default/objects/inspire1__Project_Lock__c/fields/inspire1__Start_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Lock_Date__c</fullName>
    <label>Start Lock Date</label>
    <type>DateTime</type>
</CustomField>