force-app/main/default/objects/inspire1__Project_Lock__c/fields/inspire1__User__c.field-meta.xml
<CustomField>
    <fullName>inspire1__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Lock</relationshipName>
    <type>Lookup</type>
</CustomField>